--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= meta_title %></title>
-    <meta name="description" content="<%= meta_description %>">
-
-    <!-- Facebook Open Graph data -->
-    <meta property="og:title" content="<%= meta_title %>" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="<%= image_url(meta_image) %>" />
-    <meta property="og:description" content="<%= meta_description %>" />
-    <meta property="og:site_name" content="<%= meta_title %>" />
-
-    <!-- Google+ Schema.org markup -->
-    <meta itemprop="name" content="<%= meta_title %>">
-    <meta itemprop="description" content="<%= meta_description %>">
-    <meta itemprop="image" content="<%= image_url(meta_image) %>">
-
-
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title><%= meta_title %></title>
+    <title>Le Raid de L'Hermine</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
