--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -420,7 +420,7 @@
                 </div>
                 <div class="spacer-75"></div>
                 <div class="row">
-                    <div class="col-md-5 contact">
+                    <div class="col-md-6 col-md-offset-3 contact">
                         <div class="contact-box-left mb-45">
                             <div class="contact-icon-left"></div>
                             <p>
@@ -440,42 +440,6 @@
                             </p>
                             <i class="fa fa-phone left"></i>06.16.67.43.10
                         </div>
-                    </div>
-                    <div class="col-md-6 col-md-offset-1">
-                        <!-- Contact FORM -->
-                        <form class="contact-form" id="contact" role="form">
-
-                            <!-- IF MAIL SENT SUCCESSFULLY -->
-                            <h6 class="successContent">
-                                <i class="fa fa-check left" style="color: #5cb45d;"></i>Your message has been sent successfully.
-                            </h6>
-                            <!-- END IF MAIL SENT SUCCESSFULLY -->
-
-                            <!-- MAIL SENDING UNSUCCESSFULL -->
-                            <h6 class="errorContent">
-                                <i class="fa fa-exclamation-circle left" style="color: #e1534f;"></i>There was a problem validating the form please check!
-                            </h6>
-                            <!-- END MAIL SENDING UNSUCCESSFULL -->
-
-                            <div class="form-field-wrapper">
-                                <input class="input-sm form-full" id="form-name" type="text" name="form-name" placeholder="Votre Nom" required>
-                            </div>
-
-                            <div class="form-field-wrapper">
-                                <input class="input-sm form-full" id="form-email" type="email" name="form-email" placeholder="Email" required>
-                            </div>
-
-                            <div class="form-field-wrapper">
-                                <input class="input-sm form-full" id="form-subject" type="text" name="form-subject" placeholder="Sujet">
-                            </div>
-
-                            <div class="form-field-wrapper">
-                                <textarea class="form-full" id="form-message" rows="7" name="form-message" placeholder="Votre Message" required></textarea>
-                            </div>
-
-                            <button class="btn btn-md btn-black form-full" type="submit" id="form-submit" name="submit">Envoyer Le Message</button>
-                        </form>
-                        <!-- END Contact FORM -->
                     </div>
                 </div>
             </div>
